tests/specs/ecosystem/std/archive/0_209_0.test
std/archive/0.209.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.209.0": "jsr:@std/io@0.209.0"
    },
    "jsr": {
      "@std/io@0.209.0": {
        "integrity": "371a4241bf71bb3ab5dd4f818925e802cc5832934a2fb3e409110fc5a5030c3b"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

